[package]
name = "socks5-server"
version = "1.2.1"
authors = ["vinoca <vinoca@vinoca.org>"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-dns = "0.1.0"
async-executor = "1.6.0"
async-io = "1.13.0"
futures-lite = "1.13.0"
socks5 = { package = "socks5-server", git = "https://github.com/vincascm/socks5.git" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
