[package]
name = "socks5-server"
version = "1.2.2"
authors = ["vinoca <vinoca@vinoca.org>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-dns = "0.1.1"
async-executor = "1.13.3"
async-io = "2.6.0"
futures-lite = "2.6.1"
socks5 = { package = "socks5-server", git = "https://github.com/vincascm/socks5.git" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
